--- a/css/style.css
+++ b/css/style.css
@@ -303,9 +303,11 @@ article{
 	margin: 10px 5px;
 }
 .best-seller ul li .wrap img{
+    position: inherit;
+    padding: 20px;
+    width: 100%;
 	display: block;
 	background: #f5f5f5;
-	padding: 20px;
 }
 .best-seller .contents {
     position: absolute;
@@ -335,71 +337,33 @@ article{
 	z-index: 5;
 }
 /* slide*/
-.slide{
+.slide {
     position: relative;
     width: 100%;
     height: auto;
 }
-.slide, .slide-new {
-    margin: 0 auto;
+.owl-carousel {
+    margin-top: 20px;
 }
-.slide-new {
-    width: 80%;
-    height: 100%;
+.item .wrap img, .men .wrap img {
+    padding: 10px;
+    background: #f5f5f5;
 }
-.slide-new ul{
-    overflow: hidden;
-    width: 100%;
+.item .wrap span {
+    display: block;
+    margin-top: 15px;
+    padding: 3px 0;
+    border-bottom: 1px solid rgba(0,0,0,0.15);
+    font-size: 15px;
 }
-.slide-new ul li {
-    float: left;
-    width: 33.333%;
-    height: 100%;
+.item .wrap dl dt {
+    padding: 3px 0;
+    font-weight: bold;
+    color: #000;
 }
-.slide-new ul li:hover .wrap, .men ul li:hover .wrap {
-    border: 2px solid rgba(0,0,0,0.15);
-}
-.slide-new .wrap, .men .wrap{
-	position: relative;
-	padding: 10px;
-	margin: 10px 5px 50px;
-	border: 2px solid #fff;
-}
-.slide-new .wrap img, .men .wrap img{
-	padding: 10px;
-	background: #f5f5f5;
-}
-.slide-new .wrap span{
-	display: block;
-	padding: 3px 0;
-	border-bottom: 1px solid rgba(0,0,0,0.15);
-	font-size: 15px;
-}
-.slide-new .wrap dl dt{
-	padding: 3px 0;
-	font-weight: bold;
-	color: #000;
-}
-.slide-new .wrap dl dd:last-child{
-	padding: 10px;
-	text-align: right;
-}
-.slide button{
-	background: none;
-	font-size: 35px;
-}
-.slide button.prev, .slide button.next{
-	position: absolute;
-    -webkit-transform: translateY(-50%);
-    -moz-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
-}
-.slide button.prev{
-	left: 0; top: 50%;
-}
-.slide button.next{
-	right: 0; top: 50%;
+.item .wrap dl dd:last-child {
+    padding: 10px;
+    text-align: right;
 }
 .text-through {
     text-decoration: line-through;
@@ -413,6 +377,16 @@ article{
 .men ul li{
 	float: left;
 	width: 25%;
+    transition: all 0.3s;
+}
+.men ul li:hover .wrap {
+    border: 2px solid rgba(0,0,0,0.15);
+}
+.men .wrap {
+    position: relative;
+    padding: 20px;
+    margin: 10px 5px 50px;
+    border: 2px solid #fff;
 }
 .men .wrap dl dt {
     padding: 10px 0;
@@ -516,12 +490,10 @@ footer{
 }
 .popup-contents {
     width: 100%;
-    height: 100%;
     text-align: center;
 }
 .popup-contents.top{
 	width: 100%;
-	height: 100px;
 	left: 0; top: 0;
 }
 .popup-contents h3 {
@@ -530,8 +502,10 @@ footer{
     background: #aaa;
     color: #fff;
 }
-.popup-contents img {
+.popup-contents img{
+    position: inherit;
     padding: 20px;
+    width: 100%;
     background-color: #f5f5f5;
 }
 #close {
