--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ button{
 body{
 	margin: 0 auto;
 	background-color: #fff;
-	font-family: 'Nanum Gothic', sans-serif;
+	font-family: 'sans-serif';
     font-size: 15px;
 	color: #666;
 }
