--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 ﻿@charset "utf-8";
+@import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
 * {
     margin: 0;
     padding: 0;
@@ -21,7 +22,7 @@ button{
 body{
 	margin: 0 auto;
 	background-color: #fff;
-	font-family: 'sans-serif';
+	font-family: "Nanum Gothic", sans-serif;
     font-size: 15px;
 	color: #666;
 }
