--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 * {
     margin: 0;
     padding: 0;
+    -ms-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -222,7 +223,7 @@ nav{
 .main-menu{
 	float: left;
 	position: relative;
-	padding: 6px 0;
+	padding: 5px 0;
 	width: 25%;
 	height: 30px;
 	transition: all 0.3s;
@@ -235,13 +236,13 @@ nav{
 .sub-menu{
 	display: none;
 	position: absolute;
-	margin-top: 6px;
+	margin-top: 5px;
 	width: 100%;
 	background-color: rgba(255,255,255,0.6);
 	z-index: 5;
 }
 .sub-menu li{
-	padding: 6px 0;
+	padding: 5px 0;
 	width: 100%;
 	height: 30px;
 	color: #000;
@@ -486,6 +487,7 @@ footer{
     -webkit-border-radius: 15px;
     -moz-border-radius: 15px;
     border-radius: 15px;
+    transition: all 0.3s;
 }
 .popup-contents {
     width: 100%;
