--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 ﻿@charset "utf-8";
-@import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
+@import url(https://fonts.googleapis.com/earlyaccess/nanumgothic.css);
 * {
     margin: 0;
     padding: 0;
