--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ mt20{
 	position: inherit;
 }
 /* popup*/
-#screen, #notice, #modal, #login-popup {
+#screen, #modal, #login-popup {
     position: fixed;
 }
 #screen{
@@ -50,44 +50,11 @@ mt20{
 	background-color: rgba(0,0,0,0.6);
 	z-index: 50;
 }
-#notice {
-    top: 10%;
-    left: 33.333%;
-    width: 33.333%;
-    background-color: #fff;
-    -webkit-border-radius: 15px;
-    -moz-border-radius: 15px;
-    border-radius: 15px;
-    z-index: 100;
-}
-.notice-wrap, .login-wrap {
+/*login start*/
+.login-wrap {
     padding: 30px;
     width: 100%;
     text-align: center;
-}
-#notice img {
-    width: 100%;
-    display: inline-block;
-    width: 70%;
-    -webkit-border-radius: 15px;
-    -moz-border-radius: 15px;
-    border-radius: 15px;
-}
-.notice-btn {
-    margin-top: 20px;
-    padding: 10px;
-    width: 200px;
-    background-color: #666;
-    color: #fff;
-    font-weight: bold;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    border-radius: 10px;
-}
-.notice-btn:hover {
-    background-color: #111;
-    color: #ccc;
-    transition: all 0.5s;
 }
 #login-popup {
     top: 20%;
@@ -133,6 +100,9 @@ mt20{
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     border-radius: 10px;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -ms-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
 }
 .btn-primary:hover{
@@ -160,6 +130,7 @@ mt20{
 .join-close ul li:hover{
     color: #000;
 }
+
 header {
     position: fixed;
     left: 0;
@@ -209,48 +180,69 @@ header {
 .sitemap ul li:hover{
     color: #000;
 }
+/*nav start*/
 nav{
 	float: left;
 	width: 70%;
     height: 70px;
 	text-align: center;
 }
-.nav{
-    margin-top: 30px;
-	width: 100%;
-	height: 30px;
+nav ul {
+    margin-top: 40px;
+    padding: 0;
+    text-align: center;
+    width: 100%;
+    background: rgba(255,255,255,0.1);
+    font-size: 0;
 }
-.main-menu{
-	float: left;
-	position: relative;
-	padding: 5px 0;
-	width: 25%;
-	height: 30px;
-	transition: all 0.3s;
-	text-align: center;
+nav li {
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    min-width: 25%;
+    height: 30px;
 }
-.main-menu:hover{
-	background-color: #000;
-	color: #fff;
+nav a {
+    display: block;
+    font-size: 15px;
+    padding: 7px 0;
+    text-align: center;
+    background: rgba(255,255,255,0.3);
+    color: #000;
+    -webkit-transition: all 0.8s ease;
+    -moz-transition: all 0.8s ease;
+    -ms-transition: all 0.8s ease;
+    transition: all 0.8s ease;
 }
-.sub-menu{
-	display: none;
-	position: absolute;
-	margin-top: 5px;
-	width: 100%;
-	background-color: rgba(255,255,255,0.6);
-	z-index: 5;
+nav .dropdown:hover{
+    background: #000;
+    color: #fff;
 }
-.sub-menu li{
-	padding: 5px 0;
-	width: 100%;
-	height: 30px;
-	color: #000;
-	transition: all 0.3s;
+nav .submenu li:hover a {
+    background: rgba(0,0,0,0.6);
+    color: #fff;
 }
-.sub-menu li:hover{
-	background-color: rgba(0,0,0,0.6);
-	color: #fff;
+nav li ul {
+    left: 0;
+    opacity: 0;
+    position: absolute;
+    top: -10px;
+    visibility: hidden;
+    z-index: 5;
+    -webkit-transition: all 0.8s ease;
+    -moz-transition: all 0.8s ease;
+    -ms-transition: all 0.8s ease;
+    transition: all 0.8s ease;
+}
+nav li:hover ul {
+    opacity: 1;
+    top: -10px;
+    visibility: visible;
+}
+nav li ul li {
+    width: 100%;
+    height: 30px;
 }
 
 .sns {
@@ -366,11 +358,12 @@ article{
     padding: 10px;
     text-align: right;
 }
+
 .text-through {
     text-decoration: line-through;
     color: #aaa;
 }
-
+/*menu, women, kids start*/
 .men ul, .women ul, .kids ul{
 	margin-top: 30px;
 	width: 100%;
@@ -378,7 +371,10 @@ article{
 .men ul li{
 	float: left;
 	width: 25%;
-    transition: all 0.3s;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    transition: all 0.3s ease;
 }
 .men ul li:hover .wrap {
     border: 2px solid rgba(0,0,0,0.15);
@@ -441,7 +437,10 @@ article{
 }
 .kids ul li:hover .wrap{
 	border: 2px solid rgba(0,0,0,0.15);
-	transition: all 0.3s;
+	-webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    transition: all 0.3s ease;
 }
 .kids .wrap{
 	position: relative;
@@ -521,9 +520,12 @@ footer{
 #close:hover{
 	background-color: #666;
 	color: #fff;
-	transition: all 0.3s;
+	-webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    transition: all 0.3s ease;
 }
-
+/*joinus start*/
 .joinus-wrap{
     padding: 50px;
     width: 960px;
@@ -605,5 +607,9 @@ footer{
 }
 .joinus-form .button:hover {
     background-color:#111;
-    transition: all 0.5s;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -ms-transition: all 0.5s ease;
+    transition: all 0.5s ease;
 }
+
