--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@ mt20{
     position: fixed;
 }
 #screen{
+    display: none;
 	top: 0; left: 0;
 	width: 100%; height: 100%;
 	background-color: rgba(0,0,0,0.6);
